# cppunit-text-runner

./: CMakeLists.txt  CppUnitTextRunner.cc  README.md
packaging/rpm/: cppunit-text-runner.spec  makesrpm.sh
